--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,11 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+# idea folder
+.idea/
+
+# repo url
+repo_url.txt
+repo_zipped.zip
